--- a/Layout/TestingPages/review.html
+++ b/Layout/TestingPages/review.html
@@ -31,12 +31,30 @@
         <!--Herder js file-->
         <script src="../../Script/Header.js"></script>
 
+        <script>
+            function addNewReview(){
+                        var review = $.trim($("#txtareaReview").val());
+                        var reviewTitle = $.trim($("#txtareaTitle").val());
+
+                        console.log(review);
+                        if(review == '' || reviewTitle == ''){
+                                return;
+                        }
+
+                        var content = '<div class="ful-width review-parent form-inline font-Sego"> <div class="column-Review-left"> <div style="font-size: 4em;"> <i class="fas fa-user-tie"></i> </div><div> By <a href="" >John</a> </div></div><div class="column-Review-right"> <h2 id="review_1">'+reviewTitle+'</h2> <p> '+review+'</p></div></div>';
+
+                        document.getElementById("div_review_parent").innerHTML = document.getElementById("div_review_parent").innerHTML + content;
+                }
+
+        </script>
+
         
         <title>BOOkit-Review</title>
 </head>
 
 <body>
-        <div style="font-size: 60%;">
+        <div style="font-size: 60%;" >
+            <div id="div_review_parent">
             <div class="ful-width review-parent form-inline font-Sego">
                 <div class="column-Review-left">
                     <div style="font-size: 4em;">
@@ -74,16 +92,17 @@
                         </p>
                     </div>
                 </div>
-
+            </div>
             <div class="ful-width review-add form-inline font-Sego">
-                    <h2 style="text-align: left;color: gray;">Add Review</h2> <br>
-                    <textarea placeholder="Enter review" cols="30" rows="5"></textarea>
+                    <h2 style="text-align: left;color: gray; margin-left: 1%;">Add Review</h2> <br>
+                    <textarea id="txtareaTitle" placeholder="Enter Review" cols="30" rows="1"></textarea>
+                    <textarea id="txtareaReview" placeholder="Enter Description" cols="30" rows="5"></textarea>
                     <div class="ful-width btn-left">
-                            <button class="button-addReview" style="margin-left: 2%;"><i class="fas fa-plus"></i> &nbsp;Add</button>
+                            <button id="btnAddReview" class="button-addReview" style="margin-left: 2%;" onclick="addNewReview()"><i class="fas fa-plus"></i> &nbsp;Add</button>
                     </div>
                     
                 </div>
-
+            
         </div>
 </body>
 
