Added contact us page (author - Gayan)

--- a/Layout/aboutUs.html
+++ b/Layout/aboutUs.html
@@ -34,8 +34,7 @@
     <!--Page Content -->
     <div style="height:100%">
     
-
-        <img src="../resources/TrainAboutUsImg.jpg" class="responsive">
+        <img src="../resources/TrainAboutUsImg.jpg" class="responsive" i>
 
         <h3 align=center> About BOOkit</h3>
         <hr width=20% align=center>
@@ -51,10 +50,27 @@
 
         <p> As a Private Train Reservation Company,  we are willng to provide the best and the most convenient booking experience to our valuble customers in a very favorable manner.<br>
 
-
-
-
-
+        <div id="div-last">
+            <h2 id="h2-align" class="div-text"> Awards </h2>
+            <h4 id="h4-align" class="div-text">
+            <div class="row">
+                <div class="column">
+            </div>
+                <div class="column">
+                    <div id="div-align">
+                        BOOkit wins Diamond Awards in Company of the Year at XXXX Awards 2019<br/>
+                        BOOKit wins Gold Awards Comapny of the Year at XXXX Awards 2018<br/>
+                        BOOKit wins the Award of The Best Railway Booking System of the Year 2018<br/>
+                        BOOkit wins the FT of Fintech Awards<br/>
+                        BOOKit wins Gold Awards Comapny of the Yearat XXXX Awards 2017<br/>
+                        BOOkit is the winner of the Sri Lanka Express IT Awards in Mobility Solutions 2017<br/>
+                        BOOKit is the winner at the MMA Smarties for mCommerce<br/>
+                    </div>
+                </div>
+                <div class="column">
+                </div>
+                </div>
+        </div>
 
     </div>
 
