--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -11,34 +11,36 @@
     
         <link rel="stylesheet" type="text/css" href="../../Style/style-custom.css">
         <link rel="stylesheet" type="text/css" href="../../Style/style-custom-nav.css">
+
+        <script src="../../Script/Header.js"></script>
     
     </head>
     <body>
     <div class="div-parent-md">
         <div class="navbar">
-            <a href="#home" class="nav-logo-text"><i class="fas fa-subway"></i>&nbsp BOOKit</a>
+            <a href="Home.html" class="nav-logo-text"><i class="fas fa-subway"></i>&nbsp BOOKit</a>
 
             <div class="dropdown pull-right nav-user-space">
                 <button class="dropbtn"><i class="fas fa-user"></i>
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="login.html">Sign In</a>
+                    <a href="userAccount.html">My Account</a>
+                    
                 </div>
             </div>
             <a href="#news" class="pull-right font-Sego nav-item-font support-logo nav-space"></a>
-            <a href="#news" class="pull-right font-Sego nav-item-font nav-space">CONTACT US</a>
-            <a href="#news" class="pull-right font-Sego nav-item-font nav-space">ABOUT US</a>
+            <a href="contactUs.html" class="pull-right font-Sego nav-item-font nav-space">CONTACT US</a>
+            <a href="aboutUs.html" class="pull-right font-Sego nav-item-font nav-space">ABOUT US</a>
             
         </div>
         
         <div class="navbar navbar-child-style">
                 <div class="dropdown pull-left nav-child-space">
                         <!--First item-->
-                        <button class="dropbtn nav-child-color"><i class="fas fa-train"></i>
-                            <div class="custom-resize-font">Train Details</div>
+                        <button class="dropbtn nav-child-color" onclick="redirectToTrainDetails()"><i class="fas fa-train"></i>
+                            <div onclick="redirectToTrainDetails()" class="custom-resize-font">Train Details</div>
                         </button>
                         <div class="dropdown-content font-Sego">
                             <a href="#">Seat Availability</a>
@@ -115,6 +117,10 @@
                 
         </div>
 
+    </div>
+
+    <div style="height:100px">
+        dsfds
     </div>
 
     <footer>
