--- a/Style/style-custom-nav.css
+++ b/Style/style-custom-nav.css
@@ -12,7 +12,7 @@
   
   .navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 1em;
     color: black;
     text-align: center;
     padding: 14px 16px;
@@ -25,7 +25,7 @@
   }
   
   .dropdown .dropbtn {
-    font-size: 16px;  
+    font-size: 1em;  
     border: none;
     outline: none;
     color: black;
@@ -91,13 +91,13 @@
 
   @media only screen and (max-width: 400px) {
     .nav-logo-text{
-          font-size: 15px !important;
+          font-size: 1em !important;
           font-family: Impact, Charcoal, sans-serif;
     }
 
     .navbar a {
       float: left;
-      font-size: 10px;
+      font-size: 1em;
       color: black;
       text-align: center;
       padding: 14px 10px;
@@ -138,7 +138,7 @@
 
   .nav-child-color{
     color: white !important;
-    font-size: 41px !important;
+    font-size: 1.5em !important;
   }
 
   .nav-child-space{
@@ -150,22 +150,20 @@
   }
 
   .custom-resize-font{
-    font-size: 22px !important;
+    font-size: 1em !important;
   }
 
   .footer-icon-size{
-    font-size: 30px;
+    font-size: 2em;
     padding-left: 8px;
   }
 
   @media only screen and (max-width: 1440px) {
     .nav-child-color{
         color: white !important;
-        font-size: 16px !important;
+        font-size: 1em !important;
       }
-    .custom-resize-font{
-        font-size: 16px !important;
-    }
+    
     .nav-child-space{
         margin-left: 7%;
       }
