Added station pages

--- a/Layout/contactUs.html
+++ b/Layout/contactUs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
-    <title>BOOkit-About Us</title>
+    <title>BOOkit-Contact Us</title>
 
     <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css" />
@@ -59,6 +59,7 @@
                     <br/><br/>
                     <label for="contact">Country*</label>
                     <br/><br/>
+                    
                     <select name="dropdown">
                         <option value="country">country 1</option>
                         <option value="country">country 2</option>
