--- a/Layout/aboutUs.html
+++ b/Layout/aboutUs.html
@@ -2,17 +2,24 @@
 <html>
 
 <head>
+    <!--character encoding for HTML document -->
     <meta charset="UTF-8" />
+    <!--make the webpage responsive, relative to resolution -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--linking the BOOKit train icon on top of the page -->
     <link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
+    
     <title>BOOkit-About Us</title>
 
+    <!--fontawesome icon using (css files) -->
     <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css" />
     <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css" />
 
+    <!--linking custom.css and custon-navigation bar .css files -->
     <link rel="stylesheet" type="text/css" href="../Style/style-custom.css" />
     <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css" />
 
+     <!--linking station.css file -->
     <link rel="stylesheet" type="text/css" href="../Style/style-aboutUs.css" />
 
     <script src="../Script/jquery-3.3.1.min.js"></script>
@@ -34,24 +41,24 @@
     <!--Page Content -->
     <div style="height:100%">
     
-        <img src="../resources/TrainAboutUsImg.jpg" class="responsive" i>
+        <img src="../resources/TrainAboutUsImg.jpg" class="responsive">
 
-        <h3 align=center> About BOOkit</h3>
+        <h1 align=center> About BOOkit</h1>
         <hr width=20% align=center>
 
-        <p> Sri Lanka consist of around 396 trains with 67 Long-Distance and 16 Intercity trains and convoys about 3.72 million travels everyday.
-            In Sri Lanka there are 1561km of rail tracks, 72 locomotives, 78  power sets, 565 carrages and the signaling systems. By now, it has a work force of 17,634.</p>
+        <h2> Sri Lanka consist of around 396 trains with 67 Long-Distance and 16 Intercity trains and convoys about 3.72 million travels everyday.
+            In Sri Lanka there are 1561km of rail tracks, 72 locomotives, 78  power sets, 565 carrages and the signaling systems. By now, it has a work force of 17,634.</h2>
         
-        <p> There are several train types. They are, <br>
+        <h2> There are several train types. They are, <br>
             1) Intercity expresss    : among the quickest trains, with few stops (need to get a specific ticket for these trains, moreover ticket cost is more higher than the ordinary tickets)<br>
             2) Night Mail            : Cargo transport night-time expresss trains.<br>
             3) Express               : Link Colombo and other important  and most crowded transport cities.<br>
-            4) Rural                 : General trains which stops at almost every  station.<br> </p>
+            4) Rural                 : General trains which stops at almost every  station.<br> </h2>
 
-        <p> As a Private Train Reservation Company,  we are willng to provide the best and the most convenient booking experience to our valuble customers in a very favorable manner.<br>
+        <h2> As a Private Train Reservation Company,  we are willng to provide the best and the most convenient booking experience to our valuble customers in a very favorable manner.<br></h2>
 
         <div id="div-last">
-            <h2 id="h2-align" class="div-text"> Awards </h2>
+            <h1 id="h1-align" class="div-text"> <u>Awards</u> </h2>
             <h4 id="h4-align" class="div-text">
             <div class="row">
                 <div class="column">
