--- a/Layout/login.html
+++ b/Layout/login.html
@@ -47,55 +47,19 @@
         <div id="cornerrec" style="text-align:center;">
 
             <form >
+                <div class="form-inline font-Sego">
+                        <div class="col-md-3">
+                                <i class="fas fa-user-tie font-size-6"></i>
+                        </div>
+                        <div class="col-md-3">
+                                <label for="txtContact">User name or email:</label>
+                                <input type="text" id="txtContact" name="txtbFrom"> <br>
 
-                <div class="row">
-                    <div id="image" class="user-login" style="font-size: 30vh;">
-
-                    <i class="fas fa-user-tie"></i>
-                      </div>
-                
-                         <div id="vl" class="vl">
-                               
-                          </div>
-
-                <!-- Sign in with google -->
-                <div id="goobut">
-                        <i class="fab fa-google"></i>
-                            Sign in with Google >>
-                          </div>
-
-                <div class="form-user-login">
-
-                    <!---login-->
-                    <div class="Username">
-                        <label for="txtTrainFrom">*Username or eamil</label>
-                        <input type="text" id="txtTrainFrom" name="txtbFrom">
-                    </div>
-
-                
-
-                    <div class="psword">
-                        <label for="txtTrainFrom">*Password</label>
-                        <input type="text" id="txtTrainFrom" name="txtbFrom">
-                    </div>
-                
-                </div>  
-              
-                    <div class="fpword">
-                    <a href= "#">Forgot password..?</a>
-
-                    </div>
-
-                    <button class="lgbutton">
-                        Log-in
-
-                    </buton>
-
-
-              
-                        
-
+                                <label for="txtContact" style="margin-top: 5%;">Password:</label>
+                                <input type="text" id="txtContact" name="txtbFrom">
+                        </div>
                 </div>
+                
             </form>
     </div>
 
