--- a/Layout/userAccount.html
+++ b/Layout/userAccount.html
@@ -1,97 +1,96 @@
 <!DOCTYPE html>
 <html>
+	<head>
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
+		
+			<link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css">
+			<link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css">
+		
+			<link rel="stylesheet" type="text/css" href="../Style/style-custom.css">
+			<link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
-    <title>BOOkit-Home</title>
+		 <link rel="stylesheet" type="text/css" href="../Style/style-user_account.css" />
+		 
+		 <!--jquery-->
+		 <script src="../Script/jquery-3.3.1.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css">
-    <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css">
+		 <!--jquery UI-->
+		 <script src="../Script/jquery-ui.min.js"></script>
+		 <link rel="stylesheet" href="../Style/jquery-ui.css" />
+	 
+		 <script src="../Script/Header.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../Style/style-custom.css">
-    <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<title> BOOKit-User Account </title>
 
-	<link rel="stylesheet" type="text/css" href="../Style/train.css" />
-	<title> BOOKit-User Account </title>
 
-    <script src="../Script/jquery-3.3.1.min.js"></script>
-    <script src="../Script/Header.js"></script>
-
-    <script>
-
-        //Jquery function for load nevigation to page
-        $(function () {
-            $('#Header').html(getHeaderLG());
+		<script>
+			//Jquery function for load nevigation to page
+		$(function () {
+            $('#Header').html(getHeaderMD());
             $('#footerID').html(getFooter());
         });
+		</script>
+	</head>
 
-    </script>
-</head>
+ 	<body>
+		<!--Navigation Bar -->
+		<div id='Header'></div>
 
-		
-	<body>
-
-	   <!--Navigation Bar -->
-	   <div id='Header'>
-		</div>
-		
-		<div style="height:100%">
-
-		<div class="row">
-		<div class="column-custom-n left">
-			<img src = "../resources/pic.jpg" width = "180px" height = "180px">
-			<div class = "edit">
-			<a href = "new 1.html"><h3><b> Edit Profile </b></h3></a>
-			</div>
-			<button class="button-cus">Message</button>
-			
-		</div>
-		<div class="vl"></div>
-
-		
-		<div class="column-custom-n right">
-			<div class = "ab"><h3> Name: S.S.C.G.Perera </h3>
-			<h3>Profession: Assistant Lectures</h3>	</name>
-			</name></div>
-			<br/>
-			
-			<h3><u>Contact Information</u></h3>
-			<div class = "ab"><h3>phone : 077-123456789</h3>
-			<h3>email : shane4@gmail.com</h3>
-			<h3>address : No.07, Colombo Road, Mount Lavinia.</h3>
-			</br></div>
-			
-			<h3><u>Basic Information</u></h3>
-			<div class = "ab"><h3>Birthday : 01/04/97</h3>
-			<h3>Gender : Male </h3>
-			</div>
-			
-	
-			<h3><u>Recent Activities</u></h3>
-			<table>
-			<div class = "ab"><h3>
-				<td><ol>
-					<li>Discription &nbsp&nbsp Time &nbsp&nbsp date &nbsp&nbsp <input type = "button" value = "view"></li>
-					<li>Discription &nbsp&nbsp Time &nbsp&nbsp date &nbsp&nbsp <input type = "button" value = "view"></li>
-					<li>Discription &nbsp&nbsp Time &nbsp&nbsp date &nbsp&nbsp <input type = "button" value = "view"></li>
-				</ol></h3></table>
+		<div style="height: 100%">
+				<div class="row">
+						<div class="column-custom-n left">
+							<img src = "../resources/pic.jpg" width = "180px" height = "180px">
+							<div class = "edit">
+							<a href = "new 1.html"><h3><b> Edit Profile </b></h3></a>
+							</div>
+							<button class="button-cus">Message</button>
 				
-			<h3><u>Login Activities</u></h3>
-			<div class = "ab"><h3>First Login: Date</h3>
-			<h3>Last Login: Date</h3> 
-			</div>
-	</div>
-	
+						 </div>
+						<div class="vl"></div>
+				
+				
+						 <div class="column-custom-n right">
+							<div class = "ab"><h3> Name: S.S.C.G.Perera </h3>
+							<h3>Profession: Assistant Lectures</h3>	</name>
+							</name></div>
+							<br/>
+				
+							 <h3><u>Contact Information</u></h3>
+							<div class = "ab"><h3>phone : 077-123456789</h3>
+							<h3>email : shane4@gmail.com</h3>
+							<h3>address : No.07, Colombo Road, Mount Lavinia.</h3>
+							</br></div>
+				
+							 <h3><u>Basic Information</u></h3>
+							<div class = "ab"><h3>Birthday : 01/04/97</h3>
+							<h3>Gender : Male </h3>
+							</div>
+				
+				
+							 <h3><u>Recent Activities</u></h3>
+							<table>
+							<div class = "ab"><h3>
+								<td><ol>
+									<li>Discription &nbsp&nbsp Time &nbsp&nbsp date &nbsp&nbsp <input type = "button" value = "view"></li>
+									<li>Discription &nbsp&nbsp Time &nbsp&nbsp date &nbsp&nbsp <input type = "button" value = "view"></li>
+									<li>Discription &nbsp&nbsp Time &nbsp&nbsp date &nbsp&nbsp <input type = "button" value = "view"></li>
+								</ol></h3></table>
+				
+							 <h3><u>Login Activities</u></h3>
+							<div class = "ab"><h3>First Login: Date</h3>
+							<h3>Last Login: Date</h3> 
+							</div>
+					</div>
+				
 
-		
-    <footer id="footerID">
+		</div>
 
-        </footer>
+		<footer id="footerID">
 
-	</body>
-	
-</html>	
+			</footer>
+ 	</body>
+
+ </html>	
