--- a/Style/style-login.css
+++ b/Style/style-login.css
@@ -36,7 +36,7 @@
                 #goobut{
                     display: inline-block;
                     border-radius: 45px;
-                    background-color: rgb(25, 215, 221));
+                    background-color: rgb(25, 215, 221);
                     border: 2px  solid red;
                     color: black;
                     text-align: center;
